<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/temp_textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_weight_0dp"
        android:gravity="bottom"
        android:paddingBottom="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_8dp"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/text_size_32sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/view_input_textview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_weight_0dp"
        android:gravity="bottom"
        android:paddingBottom="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_8dp"
        android:text="@string/zero"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/text_size_32sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline9"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <Button
        android:id="@+id/input_seven_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/seven"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline7">
    </Button>

    <Button
        android:id="@+id/input_eight_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/eight"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline7">
    </Button>

    <Button
        android:id="@+id/input_nine_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/nine"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline7">
    </Button>

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/multiply"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        tools:layout_editor_absoluteX="309dp"
        tools:layout_editor_absoluteY="439dp">
    </Button>

    <Button
        android:id="@+id/input_four_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/four"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline4">
    </Button>

    <Button
        android:id="@+id/input_five_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/five"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline4">
    </Button>

    <Button
        android:id="@+id/input_six_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/six"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline4">
    </Button>

    <Button
        android:id="@+id/minus_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/minus"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4">
    </Button>

    <Button
        android:id="@+id/input_one_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/one"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline5">
    </Button>

    <Button
        android:id="@+id/input_two_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/two"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline5">
    </Button>

    <Button
        android:id="@+id/input_three_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/three"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline5">
    </Button>

    <Button
        android:id="@+id/plus_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/plus"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline5">
    </Button>

    <Button
        android:id="@+id/input_zero_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/zero"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline6">
    </Button>

    <Button
        android:id="@+id/input_button_dot"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dot"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline6">
    </Button>

    <Button
        android:id="@+id/equal_sign_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/equal_sign"
        android:textColor="@android:color/white"
        android:textSize="@dimen/number_size_20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline6">
    </Button>

    <ImageButton
        android:id="@+id/plus_minus_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:src="@drawable/plus_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline6">
    </ImageButton>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/clear"
        android:textColor="#ffa500"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline8">
    </Button>

    <ImageButton
        android:id="@+id/backspace_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:src="@drawable/ic_backspace_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline8">
    </ImageButton>

    <Button
        android:id="@+id/percent_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline8">
    </Button>

    <Button
        android:id="@+id/divide_button"
        android:layout_width="@dimen/height_weight_0dp"
        android:layout_height="@dimen/height_weight_0dp"
        android:background="@drawable/other_border"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/divide"
        android:textSize="@dimen/number_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline8">
    </Button>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>


</android.support.constraint.ConstraintLayout>